updated the mywork.html page to no longer have overlapping h3 for the sliders and changed the my philosophy section to be before the slider

--- a/css/style.css
+++ b/css/style.css
@@ -7,9 +7,8 @@
  */
 
 body{
-  font-family: 'Playfair Display', serif;
+  font-family: 'Alegreya Sans SC', sans-serif;  
   color: #807F5C;
-
 }
 
 h1{
